<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2016
    zhangzhaolei@erobbing.com
-->

<resources>
    <string name="app_name">Screen recording</string>
    <string name="action_settings">Settings</string>

    <string name="title_time">Recording time</string>
    <string name="title_size">Recording size</string>
    <string name="title_bitrate">Recording bitrate</string>
    <string name="title_path">Save path</string>
    <string name="title_path_detail">Sdcard</string>

    <string name="drop_hint_time">Default 180 seconds,max 180s</string>
    <string name="drop_hint_size">Default screen size</string>
    <string name="drop_hint_bitrate">Default video bitrate</string>

    <string name="toast_title">Screen recording complete</string>
    <string name="toast_error">Input error</string>

    <string name="description">That&amp;apos;s the image to draw the progressbar around.</string>
</resources>
