<!--
    Copyright (c) 2016
    zhangzhaolei@erobbing.com
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:drop="http://schemas.android.com/apk/res/com.erobbing.screenrecorder"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_time"
        android:textColor="@android:color/black" />

    <com.erobbing.view.DropEditText
        android:id="@+id/drop_edit_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        drop:drawableRight="@drawable/drop"
        drop:dropMode="flow_parent"
        drop:hint="@string/drop_hint_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/title_size"
        android:textColor="@android:color/black" />

    <com.erobbing.view.DropEditText
        android:id="@+id/drop_edit_size"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        drop:drawableRight="@drawable/drop"
        drop:dropMode="flow_parent"
        drop:hint="@string/drop_hint_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/title_bitrate"
        android:textColor="@android:color/black" />

    <com.erobbing.view.DropEditText
        android:id="@+id/drop_edit_bitrate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        drop:drawableRight="@drawable/drop"
        drop:dropMode="flow_parent"
        drop:hint="@string/drop_hint_bitrate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/title_path"
        android:textColor="@android:color/black" />

    <Switch
        android:id="@+id/switch_save_path"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/title_path_detail" />

    <com.erobbing.squareprogressbar.SquareProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:focusable="true">
    </com.erobbing.squareprogressbar.SquareProgressBar>

</LinearLayout>
